# reusable-library-1

./: .gitattributes  CMakeLists.txt
cmake/: demoConfig.cmake.in
src/: CMakeLists.txt  demo.cpp  demo.h
test/: CMakeLists.txt  test_demo.cpp
